--- a/kista/index.html
+++ b/kista/index.html
@@ -15,13 +15,15 @@
 	<meta charset="utf-8">
 		<style>
 		  a {
-			  color:red;			  
+			  color:green;
+			  text-aling : center;
 			}
 			
 		  h1 {
 			  text-align: center;
 			}
 		#text {
+			color : black;
 			text-align:center;
 			}
 		</style>
@@ -33,7 +35,7 @@
 	</div>
 	<br>
 	<p>
-	<h1>모험을 준비하는 당신을 위한 라이브러리</h1>
+	<h1>모험을 준비하는 당신을 위한 맞춤형 라이브러리</h1>
 	</p>
 	<br>
 	<br>
@@ -48,7 +50,7 @@
 	<br>
 	<div id="text">
 	<h2> 컨텐츠에 대하여 요청사항과 피드백을 작성해주세요.</h2> 
-	<h2> 웹페이지 피보팅에 도움이 됩니다.</h2>
+	<h2> 웹페이지 개선에 도움이 됩니다.</h2>
 	<br>
 	<h3>e-mail 문의 : accelerating.startup@gmail.com</h3>
 	<br>
